TP RRT: minor changes

--- a/tps/tp_rrt/tp.tex
+++ b/tps/tp_rrt/tp.tex
@@ -22,6 +22,9 @@
 
 \maketitle
 
+\section{Disclaimer}
+This homework is based on the Homework 2 -- EKF and RRT of the CSE 571: AI-Robotics course Spring 2024 from University of Washington\footnote{\url{https://courses.cs.washington.edu/courses/cse571/24sp/assignments/CSE571_24sp_HW2.pdf}}.
+
 \section{Rapidly-exploring Random Tree}
 You are provided with a robot arm that has 2 links is able to move in a 2D plane only. Your task is to implement Rapidly-exploring Random Tree (RRT), a classical sampling-based motion planning algorithms named after its data structure, and study the parameters that govern its behaviors.
 
