TP EKF-SLAM: minor changes

--- a/tps/tp_ekf_slam/tp.tex
+++ b/tps/tp_ekf_slam/tp.tex
@@ -12,7 +12,7 @@
 
 \codigo{R-521}
 \materia{Robótica Móvil}
-\title{CSE 571 - Robotics \\ Homework 2 - EKF and RRT}
+\title{EKF-SLAM}
 \author{}
 \date{}
 
@@ -25,8 +25,8 @@
 \section{Disclaimer}
 This homework is based on the Homework 2 -- EKF and RRT of the CSE 571: AI-Robotics course Spring 2024 from University of Washington\footnote{\url{https://courses.cs.washington.edu/courses/cse571/24sp/assignments/CSE571_24sp_HW2.pdf}}.
 
-\section*{Collaboration Policy}
-Students can discuss questions, but each student MUST write up their own solution, and code their own solution. We will be checking code/PDFs for plagiarism.
+% \section*{Collaboration Policy}
+% Students can discuss questions, but each student MUST write up their own solution, and code their own solution. We will be checking code/PDFs for plagiarism.
 
 \section{Extended Kalman Filter}
 
