--- a/tps/tp_rrt/tp.tex
+++ b/tps/tp_rrt/tp.tex
@@ -12,7 +12,7 @@
 
 \codigo{R-521}
 \materia{Robótica Móvil}
-\title{CSE 571 - Robotics \\ Homework 2 - EKF and RRT}
+\title{Rapidly-exploring Random Tree (RRT)}
 \author{}
 \date{}
 
