--- a/teoricas/teorica_08/src/gtsam.tex
+++ b/teoricas/teorica_08/src/gtsam.tex
@@ -6,5 +6,11 @@
 gtsam/build/python/gtsam/examples/OdometryExamples.py
 gtsam/build/python/gtsam/examples/Pose2SLAMExample.ipynb
 \end{lstlisting}
+
+\note{https://repository.gatech.edu/server/api/core/bitstreams/b3606eb4-ce55-4c16-8495-767bd46f0351/content}
+
+\note{https://www.youtube.com/playlist?list=PLOJ3GF0x2_eWtGXfZ5Ne1Jul5L-6Q76Sz}
+
+\note{https://gtsam.org/notes/GTSAM-Concepts.html}
     
 \end{frame}
