Slides 8: Add EKF-SLAM video

--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -1171,14 +1171,13 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Example: Victoria Park Dataset}
-    \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
-    \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
-
-    % \begin{center}
-    % \includegraphics[width=0.8\textwidth]{victoria_park.pdf} % Replace with actual vectorized image
-    % \textit{Courtesy: E. Nebot}
-    % \end{center}
+    \frametitle{EKF-SLAM 2D Example}
+    \note{Vídeo extraído de https://youtu.be/xXo5oBYnuxE?si=VGVFflbAgcABIIVf}
+    \note{https://github.com/taihup/slam_ekf_ros2}
+        
+    \begin{center}
+    \movie[poster,loop,showcontrols]{\includegraphics[width=0.8\columnwidth]{./images/ekf_slam/ekf_slam_2d_video.jpg}}{./videos/ekf_slam_2d.mp4}
+    \end{center}
 \end{frame}
 
 \begin{frame}
