--- a/teoricas/teorica_08/src/graph_slam.tex
+++ b/teoricas/teorica_08/src/graph_slam.tex
@@ -92,10 +92,10 @@
 
 \begin{frame}[fragile]
     \frametitle{2D Pose-Graph con LiDAR}
-    \note{Víðeo extraído de https://youtu.be/E6IvbjZA7Ao}
+    \note{Vídeo extraído de https://youtu.be/E6IvbjZA7Ao}
         
     \begin{center}
-    \movie[loop]{\includegraphics[width=0.5\columnwidth]{./images/pose_graph_2d_video.jpg}}{./videos/pose_graph_2d.mp4}
+    \movie[poster,loop,showcontrols]{\includegraphics[width=0.5\columnwidth]{./images/pose_graph_2d_video.jpg}}{./videos/pose_graph_2d.mp4}
     \end{center}
     
 \end{frame}
