Slides 08: Add GTSAM Odometry Example

--- a/teoricas/teorica_08/src/graph_slam.tex
+++ b/teoricas/teorica_08/src/graph_slam.tex
@@ -30,7 +30,7 @@
     \note{Información extraída de https://youtu.be/uuiaqGLFYa4}
     
     \begin{block}{Factor-Graph}
-        Un Factor-graph es un término matemático, un grafo bipartito representando la factorización de una función. Esto significa que podemos tomar una función por ejemplo $g(.)$ y descomponerla mediante el producto de funciones $f(.)$,
+        Un Factor-graph es un término matemático, un grafo bipartito (Nodos: Variables y Factores) representando la factorización de una función. Esto significa que podemos tomar una función por ejemplo $g(.)$ y descomponerla mediante el producto de funciones $f(.)$,
         
         \begin{equation*}
             g(X_{1}, \dots, X_{n}) = \prod_{i} f_{i}(S_{i}) \quad \text{con} \quad S_{i}     \subseteq \{ X_{1},\dots, X_{n} \}
