--- a/teoricas/teorica_08/src/graph_slam.tex
+++ b/teoricas/teorica_08/src/graph_slam.tex
@@ -642,6 +642,8 @@
 \begin{frame}
     \frametitle{Podemos suprimir las columnas y las filas de las variables correspondientes}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
+
+    \note{Acá $\Lambda$ es la matríz de información $\eta = \inverse{\covariance} \mu$}
     
     \scriptsize
 
