Slides 8: Minor changes

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -89,6 +89,7 @@
 \newcommand{\jacobian}{\vec{J}}
 \newcommand{\linearSystemb}{\vec{b}}
 \newcommand{\linearSystemH}{\vec{H}}
+\newcommand{\covarianceBold}{\vec{\covariance}}
 
 
 % Motion Planning slides
